# Hazel-PhysVR-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DetectOs.cmake  FileStructure.cmake  HazelPVR.cpp  HazelPVRE.cpp  HazelPVRE.h  LICENSE  OS_detection.cmake  Platform.cmake  Platform_detection.cmake  README.md  Vendor.cmake  build.sh  build.vars  clean.sh  configure.sh  imgui.ini  main.cpp  vars.sh
HazelPVR/: CMakeLists.txt  FileStructure.cmake  Platform.cmake  SetPlatformAttributes.cmake
HazelPVR/include/: HazelPVR.hpp  hzpvrpch.hpp
HazelPVR/include/HazelPVR/: Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  OrthographicCameraController.hpp  Window.hpp
HazelPVR/include/HazelPVR/Core/: Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  Layer.hpp  Window.hpp
HazelPVR/include/HazelPVR/Debug/: Instrumentor.hpp
HazelPVR/include/HazelPVR/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
HazelPVR/include/HazelPVR/ImGui/: ImGuiLayer.hpp
HazelPVR/include/HazelPVR/Renderer/: Buffer.hpp  GraphicsContext.hpp  OrthographicCamera.hpp  OrthographicCameraController.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
HazelPVR/include/Platform/Linux/: LinuxInput.hpp  LinuxWindow.hpp
HazelPVR/include/Platform/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp
HazelPVR/include/Platform/Windows/: WindowsInput.hpp  WindowsWindow.hpp
HazelPVR/include/Platform/macOS/: macOSInput.hpp  macOSWindow.hpp
HazelPVR/src/HazelPVR/: Application.cpp  Core.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  OrthographicCameraController.cpp
HazelPVR/src/HazelPVR/Core/: Application.cpp  Core.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
HazelPVR/src/HazelPVR/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
HazelPVR/src/HazelPVR/Renderer/: Buffer.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
HazelPVR/src/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp
HazelPVR/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
HazelPVR/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
HazelPVR/src/Platform/macOS/: macOSInput.cpp  macOSWindow.cpp
Sandbox/: CMakeLists.txt  FileStructure.cmake  Platform.cmake
Sandbox/assets/shaders/: Basic.glsl  FlatColor.glsl  Texture.glsl
Sandbox/include/: ExampleLayer.hpp  Particle2D.hpp  ParticleSimulation2D.hpp  Sandbox2D.hpp
Sandbox/src/: ExampleLayer.cpp  Particle2D.cpp  ParticleSimulation2D.cpp  Sandbox2D.cpp  SandboxApp.cpp
include/: HazelPVR.h  HazelPVR.hpp  hzpvrpch.h  hzpvrpch.hpp
include/HazelPVR/: Application.h  Application.hpp  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  Log.hpp  MouseButtonCodes.h  MouseButtonCodes.hpp  Window.h  hzpvrpch.h
include/HazelPVR/Core/: Timestep.h
include/HazelPVR/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  Event.hpp  KeyEvent.h  MouseEvent.h
include/HazelPVR/ImGui/: ImGuiLayer.h  ImGuiLayer.hpp
include/HazelPVR/Renderer/: Buffer.h  Buffer.hpp  GraphicsContext.h  GraphicsContext.hpp  OrhographicCamera.h  OrthographicCamera.h  OrthographicCamera.hpp  RenderCommand.h  Renderer.h  Renderer.hpp  RendererAPI.h  RendererAPI.hpp  Shader.h  VertexArray.h  VertexArray.hpp
include/Platform/Linux/: LinuxInput.h  LinuxWindow.h  LinuxWindow.hpp
include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLBuffer.hpp  OpenGLContext.h  OpenGLContext.hpp  OpenGLRendererAPI.h  OpenGLRendererAPI.hpp  OpenGLVertexArray.h  OpenGLVertexArray.hpp
include/Platform/Windows/: WindowsInput.h  WindowsInput.hpp  WindowsWindow.h  WindowsWindow.hpp
include/Platform/macOS/: macOSInput.cpp  macOSInput.h  macOSWindow.h  macOSWindow.hpp
scripts/: build.sh  build.vars  generate_vssln.bat
src/: HazelPVR.h  SandboxApp.cpp
src/HazelPVR/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h  Layer.cpp  LayerStack.cpp  Log.cpp
src/HazelPVR/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
src/HazelPVR/Renderer/: Buffer.cpp  OrhographicCamera.cpp  OrthographicCamera.cpp  RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  VertexArray.cpp
src/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp
src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLVertexArray.cpp
src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
src/Platform/macOS/: macOSInput.cpp  macOSWindow.cpp
to_be_deleted/: CMakeLists.txt  Platform.cmake  Vendor.cmake
